statum-macros/tests/ui/invalid_transition_unknown_secondary_return_state.stderr
error: Error: transition target `Ghost` is not a variant of the machine's linked `#[state]` family.
  --> tests/ui/invalid_transition_unknown_secondary_return_state.rs:14:1
   |
14 | #[state]
   | ^^^^^^^^
...
23 | #[transition]
   | ------------- in this attribute macro expansion
   |
   = note: this error originates in the macro `__statum_resolve_state_target` which comes from the expansion of the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find type `Ghost` in this scope
  --> tests/ui/invalid_transition_unknown_secondary_return_state.rs:25:74
   |
25 |     fn to_b_or_ghost(self) -> ::core::result::Result<Machine<B>, Machine<Ghost>> {
   |                                                                          ^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
24 | impl<Ghost> Machine<A> {
   |     +++++++

error[E0425]: cannot find type `Ghost` in this scope
  --> tests/ui/invalid_transition_unknown_secondary_return_state.rs:37:34
   |
37 |     fn to_ghost(self) -> Machine<Ghost> {
   |                                  ^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
24 | impl<Ghost> Machine<A> {
   |     +++++++

error[E0425]: cannot find type `Ghost` in this scope
  --> tests/ui/invalid_transition_unknown_secondary_return_state.rs:37:34
   |
37 |     fn to_ghost(self) -> Machine<Ghost> {
   |                                  ^^^^^ not found in this scope

error[E0599]: no variant or associated item named `Ghost` found for enum `StateId` in the current scope
  --> tests/ui/invalid_transition_unknown_secondary_return_state.rs:23:1
   |
20 | #[machine]
   | ---------- variant or associated item `Ghost` not found for this enum
...
23 | #[transition]
   | ^^^^^^^^^^^^^ variant or associated item not found in `StateId`
   |
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)
